# docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  sitemap.xml  staticwebapp.config.json
.github/: pull_request_template.md
.github/workflows/: auto-release.yaml  auto-tag.yaml  docs.yaml
business/abbreviations/: index.html
business/domain-driven/: index.html
business/use-cases/hitrail/: index.html
docs/: .pages.yaml  faq.md  index.md
docs/business/: abbreviations.md  domain-driven.md
docs/business/use-cases/: hitrail.md
docs/integration/: architecture.md  faq.md  further-reads.md  index.md  quick-start.md  strategy.md  terms-and-definitions.md
docs/integration/apim/: index.md
docs/integration/decision-log/: index.md
docs/integration/event-driven/: index.md
docs/integration/further-reads/: index.md
docs/integration/guidelines/: confluent-guidelines.md  event-modeling.md  integration.md  kafka-guidelines.md  naming.md
docs/publications/: .pages.yaml  index.md
faq/: index.html
integration/: index.html
integration/apim/: index.html
integration/architecture/: index.html
integration/decision-log/: index.html
integration/event-driven/: index.html
integration/faq/: index.html
integration/further-reads/: index.html
integration/methodology/: index.html
integration/quick-start/: index.html
integration/release-notes/: index.html
integration/strategy/: index.html
integration/terms-and-definitions/: index.html
publications/: index.html
publications/reports/: index.html
search/: search_index.json
(+30 files in other folders)
